--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
-<h1>filme e series</h1>
+<h1>Cuidados com Pets</h1>
 
-<p>  </p>
+<p>Os pets precisam de atenção, carinho, cuidados e muito amor. Destinar um tempo do dia para ele é o primeiro cuidado básico que se deve ter.</p>
 
-<p>  </p>
+<p>É muito importante reservar um tempinho para passeios e brincadeiras. As atividades contribuem com o desenvolvimento físico e emocional do pet.  </p>
 
-<p>  </p>
+<p>A preocupação com a alimentação do cão ou gato é de extrema importância para que ele viva bem e de forma saudável.
+ Para escolher o alimento ideal, é preciso se atentar à espécie, porte e idade do animal, e escolher um alimento de qualidade, que supra todas às suas 
+ necessidades nutricionais e fisiológicas.  </p>
+
+<strong>negrito</strong>
+
+<em>italico</em>
