--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
-<h1>Cuidados com Pets</h1>
+<!DOCTYPE html>
+<html lang="pt-br"
+    <meta charset="UTF-8">
 
-<p>Os pets precisam de atenção, carinho, cuidados e muito amor. Destinar um tempo do dia para ele é o primeiro cuidado básico que se deve ter.</p>
+  <h1>Cuidados com Pets</h1>
 
-<p>É muito importante reservar um tempinho para passeios e brincadeiras. As atividades contribuem com o desenvolvimento físico e emocional do pet.  </p>
+  <p>Os pets precisam de atenção, carinho, cuidados e muito amor. Destinar um tempo do dia para ele é o <strong>primeiro cuidado básico</strong> que se deve ter.</p>
+
+  <p><em>É muito importante reservar um tempinho para passeios e brincadeiras. As atividades contribuem com o desenvolvimento físico e emocionaldo pet. </p>
+
+  <p>A preocupação com a alimentação do cão ou gato é de extrema importância para que ele viva bem e de forma saudável.
+  Para escolher o alimento ideal, é preciso se atentar à espécie, porte e idade do animal, e escolher um alimento de qualidade, que supra todas às suas 
+   necessidades nutricionais e fisiológicas.  </p>
+   <html>
+<p><em>É muito importante reservar um tempinho para passeios e brincadeiras. As atividades <strong>contribuem com o desenvolvimento físico e emocional do pet</strong>
+</p>
 
 <p>A preocupação com a alimentação do cão ou gato é de extrema importância para que ele viva bem e de forma saudável.
- Para escolher o alimento ideal, é preciso se atentar à espécie, porte e idade do animal, e escolher um alimento de qualidade, que supra todas às suas 
+Para escolher o alimento ideal, é preciso se atentar à espécie, porte e idade do animal, e escolher um alimento de qualidade, que supra todas às suas 
  necessidades nutricionais e fisiológicas.  </p>
+ <html>
+
