--- a/index.html
+++ b/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-br"
-    <meta charset="UTF-8">
+   <head>
+       <meta charset="UTF-8">
+       <title>cuidados com pets</title>
+   </head>
+   <body>
+       <h1>Cuidados com Pets</h1>
 
-  <h1>Cuidados com Pets</h1>
+       <p>Os pets precisam de atenção, carinho, cuidados e muito amor. Destinar um tempo do dia para ele é o <strong>primeiro cuidado básico</strong> que se deve ter.</p>
 
-  <p>Os pets precisam de atenção, carinho, cuidados e muito amor. Destinar um tempo do dia para ele é o <strong>primeiro cuidado básico</strong> que se deve ter.</p>
+       <p><em>É muito importante reservar um tempinho para passeios e brincadeiras. As atividades contribuem com o desenvolvimento físico e emocionaldo pet. </p>
 
-  <p><em>É muito importante reservar um tempinho para passeios e brincadeiras. As atividades contribuem com o desenvolvimento físico e emocionaldo pet. </p>
+       <p>A preocupação com a alimentação do cão ou gato é de extrema importância para que ele viva bem e de forma saudável.
+       Para escolher o alimento ideal, é preciso se atentar à espécie, porte e idade do animal, e escolher um alimento de qualidade, que supra todas às suas 
+       necessidades nutricionais e fisiológicas.  </p>
+       <html>
+       <p><em>É muito importante reservar um tempinho para passeios e brincadeiras. As atividades <strong>contribuem com o desenvolvimento físico e emocional do pet</strong>
+       </p>
 
-  <p>A preocupação com a alimentação do cão ou gato é de extrema importância para que ele viva bem e de forma saudável.
-  Para escolher o alimento ideal, é preciso se atentar à espécie, porte e idade do animal, e escolher um alimento de qualidade, que supra todas às suas 
-   necessidades nutricionais e fisiológicas.  </p>
-   <html>
-<p><em>É muito importante reservar um tempinho para passeios e brincadeiras. As atividades <strong>contribuem com o desenvolvimento físico e emocional do pet</strong>
-</p>
-
-<p>A preocupação com a alimentação do cão ou gato é de extrema importância para que ele viva bem e de forma saudável.
-Para escolher o alimento ideal, é preciso se atentar à espécie, porte e idade do animal, e escolher um alimento de qualidade, que supra todas às suas 
- necessidades nutricionais e fisiológicas.  </p>
+       <p>A preocupação com a alimentação do cão ou gato é de extrema importância para que ele viva bem e de forma saudável.
+       Para escolher o alimento ideal, é preciso se atentar à espécie, porte e idade do animal, e escolher um alimento de qualidade, que supra todas às suas 
+       necessidades nutricionais e fisiológicas.  </p>
+    </body>
  <html>
 
