--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="pt-br"
+<html lang="pt-br">
    <head>
        <meta charset="UTF-8">
        <title>cuidados com pets</title>
+       <link rel="stylesheet" hrel="style.css">
    </head>
    <body>
        <h1>Cuidados com Pets</h1>
@@ -14,8 +15,8 @@
        <p>A preocupação com a alimentação do cão ou gato é de extrema importância para que ele viva bem e de forma saudável.
        Para escolher o alimento ideal, é preciso se atentar à espécie, porte e idade do animal, e escolher um alimento de qualidade, que supra todas às suas 
        necessidades nutricionais e fisiológicas.  </p>
-       <html>
-       <p><em>É muito importante reservar um tempinho para passeios e brincadeiras. As atividades <strong>contribuem com o desenvolvimento físico e emocional do pet</strong>
+
+       <p><em>É muito importante reservar um tempinho para passeios e brincadeiras</em>. As atividades <strong>contribuem com o desenvolvimento físico e emocional do pet</strong>
        </p>
 
        <p>A preocupação com a alimentação do cão ou gato é de extrema importância para que ele viva bem e de forma saudável.
