--- a/index.html
+++ b/index.html
@@ -22,6 +22,23 @@
        <p>A preocupação com a alimentação do cão ou gato é de extrema importância para que ele viva bem e de forma saudável.
        Para escolher o alimento ideal, é preciso se atentar à espécie, porte e idade do animal, e escolher um alimento de qualidade, que supra todas às suas 
        necessidades nutricionais e fisiológicas.  </p>
+       <h2>Benefícios</h2>
+
+       <ul>
+           <li class="itens">Faça passeios regularmente com o pet</li>
+           <li class="itens">Organize objetos e itens da casa de acordo com a idade do pet.</li>
+           <li class="itens">Disponibilize brinquedos que o cão ou o gato gostem</li>
+           <li class="itens">Deixe o ambiente sempre limpo e adequado</li>
+       </ul>
+
+
+
+
+
+
+
     </body>
  <html>
+
+ 
 
